// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarginPreset renders default 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders responsive override spaceStack010 for sm and spaceStack030 for md breakpoints 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders responsive override spaceStack010 for xs, spaceStack020 for sm, and spaceStack030 for md breakpoints 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders responsive override spaceStack010 for xs, spaceStack020 for sm, and wrong for md breakpoints 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders responsive override spaceStack010 for xs, spaceStack020 for sm, spaceStack030 for md, spaceStack040 for lg breakpoings, and ignore wrong prop 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders with override incorrect object 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`MarginPreset renders with override spaceStack010 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders default 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders responsive override spaceInset010Squish for xs, and spaceInset030Squish for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (max-width:959px) {
  .emotion-0 {
    padding: 4px 8px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders responsive override spaceInset010Squish for xs, spaceInset020Squish for sm, and spaceInset030Squish for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (max-width:479px) {
  .emotion-0 {
    padding: 4px 8px;
  }
}

@media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    padding: 8px 12px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders responsive override spaceInset010Squish for xs, spaceInset020Squish for sm, and spaceInset030Squish for md breakpoints in reverser order 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (max-width:479px) {
  .emotion-0 {
    padding: 4px 8px;
  }
}

@media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    padding: 8px 12px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders responsive override spaceInset010Squish for xs, spaceInset020Squish for sm, and wrong for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (max-width:479px) {
  .emotion-0 {
    padding: 4px 8px;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 8px 12px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders responsive override spaceInset010Squish for xs, spaceInset020Squish for sm, spaceInset030Squish for md, spaceInset040Squish for lg breakpoints and ignore wrong prop 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

@media screen and (max-width:479px) {
  .emotion-0 {
    padding: 4px 8px;
  }
}

@media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    padding: 8px 12px;
  }
}

@media screen and (min-width:960px) and (max-width:1439px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders with override incorrect object 1`] = `
<DocumentFragment>
  @media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`SpaceInset renders with override spaceInset010Squish 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 4px 8px;
}

@media screen and (min-width:480px) and (max-width:959px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 8px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
